# gcloud-image-transformer

./: .gitignore  HackersAndSlackers-909c5a9c740f.json  Pipfile  README.md  config.py  images.py  main.py  pyproject.toml  requirements.txt  setup.py
application/: __init__.py  images.py
gcloud_image_transformer/: __init__.py  bucket.py  fetch.py  fetch_images.py  images.py  log.py  transform.py  transformer.py
gcloud_image_transformer/transformers/: __init__.py  base.py  retina.py  standard.py  webp.py
gcp_remote_image_transformer/: __init__.py  bucket.py  fetch_images.py  transformer.py
