[tool.poetry]
name = "ghost_sql_sanitation"
version = "1.0.0"
description = "Sanitize Ghost Blog SQL data to ensure content quality."
authors = ["Todd Birchard <toddbirchard@gmail.com>"]
maintainers = ["Todd Birchard <toddbirchard@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hackersandslackers/gcloud_image_transformer/"
keywords = ["Ghost",
            "Blog",
            "SQL",
            "Automation",
            "Content"]

[tool.poetry.dependencies]
Python = "^3.7"
SQLAlchemy = "*"
PyMySQL = "*"
Flask = "*"
Loguru = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
run = "main:main"

[tool.poetry.urls]
issues = "https://github.com/hackersandslackers/gcloud_image_transformer/issues"
