[tool.poetry]
name = "gcloud-image-transformer"
version = "1.0.0"
description = "Optimize images hosted on Google Cloud Storage."
authors = ["Todd Birchard <toddbirchard@gmail.com>"]
maintainers = ["Todd Birchard <toddbirchard@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hackersandslackers/gcloud_image_transformer/"
keywords = ["Google Cloud",
            "CDN",
            "Pillow",
            "Automation",
            "Images"]

[tool.poetry.dependencies]
python = "^3.8"
pillow = "*"
google-cloud-storage = "*"
requests = "*"
webp-converter = "*"
python-resize-image = "*"
loguru = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
run = "main:main"

[tool.poetry.urls]
issues = "https://github.com/hackersandslackers/gcloud_image_transformer/issues"
